--- a/Talleres/Taller_1_21.ipynb
+++ b/Talleres/Taller_1_21.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -132,10 +132,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-21-df7a42220c8d>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-21-df7a42220c8d>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    cuarto_trimestre = filter(lambda -3, lista_meses)\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "cuarto_trimestre = filter(lambda -3, lista_meses)\n",
+    "\n",
+    "print(cuarto_trimestre)\n"
    ]
   },
   {
@@ -2566,9 +2578,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (myenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2580,7 +2592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
